--- a/Lab.ipynb
+++ b/Lab.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x27352f71ec8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x113bd1c7c88>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -67,6 +67,13 @@
     "        stocks_df = stocks_df.join(stock_df)\n",
     "\n",
     "stocks_df.plot(figsize=(12,8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This is cool"
    ]
   },
   {
